--- a/index.html
+++ b/index.html
@@ -6112,6 +6112,7 @@ function showSection(id, key) {
 }
 </script>
 
+<script>
 /* ============================================================
    ⭐ GOVERNMENT-GRADE NOVAK CERTIFICATE ENGINE — SECTION 3A
    Core bootstrap + HVET color science + utility framework
