--- a/index.html
+++ b/index.html
@@ -6214,6 +6214,7 @@ seg(hex, i, len) {
   return parseInt(sub || "0", 16);
 }
 };
+</script>
 
 <script>
 /* =======================================================================
