--- a/index.html
+++ b/index.html
@@ -6685,123 +6685,133 @@ drawNovakEmblemV3(ctx, hvet) {
     ctx.restore();
   },
 
-  /* =====================================================================
-     6. GUILLOCHÉ SUITE (Primary + Interference v2 + Triquetra)
-     ===================================================================== */
-  drawGuillochePrimary(ctx, p) {
-    const W = ctx.canvas.width, H = ctx.canvas.height;
-    const cx = W / 2, cy = H * 0.24, R = 820;   // lifted a bit
+/* =====================================================================
+   6. GUILLOCHÉ SUITE — PERFECTLY CENTERED TO NOVAK EMBLEM CORE
+   ===================================================================== */
 
-    const p1 = this.seg(this.state.hvet, 0, 2) % 25 + 22;
-    const p2 = this.seg(this.state.hvet, 4, 2) % 30 + 24;
-    const phase = (this.seg(this.state.hvet, 12, 2) % 360) * (Math.PI / 180);
+// Unified emblem center for bloom + guilloché + interference + triquetra
+getEmblemCenter() {
+  const W = this.state.canvas.width;
+  const H = this.state.canvas.height;
 
-    ctx.save();
-    ctx.lineWidth = 1.5;
-    ctx.globalAlpha = 0.95;
+  return {
+    cx: W / 2,
+    cy: H * 0.46     // PERFECT vertical alignment under EIR block
+  };
+},
+
+// ------------------------- PRIMARY GUILLOCHÉ -------------------------
+drawGuillochePrimary(ctx, p) {
+  const { cx, cy } = this.getEmblemCenter();
+  const R = 780;  // sits INSIDE bloom (~820–840)
+
+  const p1 = this.seg(this.state.hvet, 0, 2) % 25 + 22;
+  const p2 = this.seg(this.state.hvet, 4, 2) % 30 + 24;
+  const phase = (this.seg(this.state.hvet, 12, 2) % 360) * (Math.PI / 180);
+
+  ctx.save();
+  ctx.lineWidth = 1.4;
+  ctx.globalAlpha = 0.96;
+  ctx.beginPath();
+
+  for (let t = 0; t < Math.PI * 18; t += 0.0017) {
+    const r =
+      R +
+      Math.sin(p1 * t + phase) * 42 +
+      Math.cos(p2 * t) * 28 +
+      this.rnd(-1.4, 1.4);
+
+    const x = cx + r * Math.cos(t);
+    const y = cy + r * Math.sin(t);
+
+    const a = (t / (Math.PI * 2)) % 1;
+    const c =
+      a < 1/3 ? (p.primary   || "#0A3D91") :
+      a < 2/3 ? (p.secondary || "#7A1FB3") :
+                (p.tertiary  || "#009E8E");
+
+    ctx.strokeStyle = c;
+    t === 0 ? ctx.moveTo(x, y) : ctx.lineTo(x, y);
+  }
+
+  ctx.stroke();
+  ctx.restore();
+},
+
+// --------------------- INTERFERENCE FOIL LAYER -----------------------
+drawGuillocheInterference(ctx, p) {
+  const { cx, cy } = this.getEmblemCenter();
+  const base = 720;   // stays inside R=780 ring
+
+  const h = this.seg(this.state.hvet, 20, 2) % 110 + 50;
+  const k = this.seg(this.state.hvet, 40, 2) % 80 + 34;
+  const m = this.seg(this.state.hvet, 60, 2) % 90 + 40;
+
+  ctx.save();
+  ctx.globalAlpha = 0.55;
+  ctx.lineWidth = 0.9;
+  ctx.globalCompositeOperation = "lighter";
+
+  for (let pass = 0; pass < 3; pass++) {
     ctx.beginPath();
 
-    for (let t = 0; t < Math.PI * 18; t += 0.0017) {
+    ctx.strokeStyle =
+      pass === 0 ? (p.foil1 || "#00C6FF") :
+      pass === 1 ? (p.foil2 || "#FF00E0") :
+                   (p.foil3 || "#7AF5FF");
+
+    for (let t = 0; t < Math.PI * 16; t += 0.002) {
       const r =
-        R +
-        Math.sin(p1 * t + phase) * 42 +
-        Math.cos(p2 * t) * 28 +
-        this.rnd(-1.6, 1.6);
+        base +
+        Math.sin(t * (h + pass * 3)) * 26 +
+        Math.cos(t * (k + pass * 2)) * 20 +
+        Math.sin(t * (m * 0.5 + pass)) * 16 +
+        this.rnd(-1.0, 1.0);
 
       const x = cx + r * Math.cos(t);
       const y = cy + r * Math.sin(t);
 
-      const angleNorm = (t / (Math.PI * 2)) % 1;
-      let cGrad;
-      if (angleNorm < 1 / 3) {
-        cGrad = p.primary || "#0A3D91";
-      } else if (angleNorm < 2 / 3) {
-        cGrad = p.secondary || "#7A1FB3";
-      } else {
-        cGrad = p.tertiary || "#009E8E";
-      }
-      ctx.strokeStyle = cGrad;
-
       t === 0 ? ctx.moveTo(x, y) : ctx.lineTo(x, y);
     }
 
     ctx.stroke();
-    ctx.restore();
-  },
+  }
 
-  // Interference v2 — unforgeable curves with diffractive feel
-  drawGuillocheInterference(ctx, p) {
-    const W = ctx.canvas.width, H = ctx.canvas.height;
-    const cx = W / 2, cy = H * 0.24;
+  ctx.globalCompositeOperation = "source-over";
+  ctx.restore();
+},
 
-    const base = 760;
-    const h = this.seg(this.state.hvet, 20, 2) % 110 + 50;
-    const k = this.seg(this.state.hvet, 40, 2) % 80 + 34;
-    const m = this.seg(this.state.hvet, 60, 2) % 90 + 40;
+// ------------------------- TRIQUETRA CORE ----------------------------
+drawTriquetra(ctx, p) {
+  const { cx, cy } = this.getEmblemCenter();
 
-    ctx.save();
-    ctx.globalAlpha = 0.55;
-    ctx.lineWidth = 0.9;
-    ctx.globalCompositeOperation = "lighter";
+  const scale = 520;  // sits INSIDE interference + primary ring
+  const freq = (this.seg(this.state.hvet, 80, 2) % 5) + 3;
+  const twist = (this.seg(this.state.hvet, 120, 2) % 360) * (Math.PI / 180);
 
-    for (let pass = 0; pass < 3; pass++) {
-      ctx.beginPath();
-      const color =
-        pass === 0 ? (p.foil1 || "#00C6FF") :
-        pass === 1 ? (p.foil2 || "#FF00E0") :
-                     (p.foil3 || "#7AF5FF");
-      ctx.strokeStyle = color;
+  ctx.save();
+  ctx.globalAlpha = 0.40;
+  ctx.lineWidth = 1.3;
 
-      for (let t = 0; t < Math.PI * 16; t += 0.002) {
-        const r =
-          base +
-          Math.sin(t * (h + pass * 3)) * 26 +
-          Math.cos(t * (k + pass * 2)) * 20 +
-          Math.sin(t * (m * 0.5 + pass)) * 16 +
-          this.rnd(-1.1, 1.1);
+  const grad = ctx.createRadialGradient(
+    cx, cy, scale * 0.1,
+    cx, cy, scale * 1.2
+  );
+  grad.addColorStop(0.0, (p.rainbowA || "#00E0FF"));
+  grad.addColorStop(0.5, (p.rainbowB || "#FF00FF"));
+  grad.addColorStop(1.0, (p.rainbowC || "#FFD200"));
+  ctx.strokeStyle = grad;
 
-        const x = cx + r * Math.cos(t);
-        const y = cy + r * Math.sin(t);
-        t === 0 ? ctx.moveTo(x, y) : ctx.lineTo(x, y);
-      }
-      ctx.stroke();
-    }
+  ctx.beginPath();
+  for (let t = 0; t <= Math.PI * 2; t += 0.002) {
+    const x = cx + scale * Math.sin(freq * t + twist) * Math.cos(t);
+    const y = cy + scale * Math.sin(freq * t + twist) * Math.sin(t);
+    t === 0 ? ctx.moveTo(x, y) : ctx.lineTo(x, y);
+  }
 
-    ctx.globalCompositeOperation = "source-over";
-    ctx.restore();
-  },
-
-  drawTriquetra(ctx, p) {
-    const W = ctx.canvas.width, H = ctx.canvas.height;
-    const cx = W / 2, cy = H * 0.24;
-
-    const scale = 480;
-    const freq = (this.seg(this.state.hvet, 80, 2) % 5) + 3;
-    const twist = (this.seg(this.state.hvet, 120, 2) % 360) * (Math.PI / 180);
-
-    ctx.save();
-    ctx.globalAlpha = 0.40;
-    ctx.lineWidth = 1.3;
-
-    const grad = ctx.createRadialGradient(
-      cx, cy, scale * 0.1,
-      cx, cy, scale * 1.2
-    );
-    grad.addColorStop(0.0,  (p.rainbowA || "#00E0FF"));
-    grad.addColorStop(0.5,  (p.rainbowB || "#FF00FF"));
-    grad.addColorStop(1.0,  (p.rainbowC || "#FFD200"));
-    ctx.strokeStyle = grad;
-
-    ctx.beginPath();
-    for (let t = 0; t <= Math.PI * 2; t += 0.002) {
-      const x = cx + scale * Math.sin(freq * t + twist) * Math.cos(t);
-      const y = cy + scale * Math.sin(freq * t + twist) * Math.sin(t);
-      t === 0 ? ctx.moveTo(x, y) : ctx.lineTo(x, y);
-    }
-
-    ctx.stroke();
-    ctx.restore();
-  },
+  ctx.stroke();
+  ctx.restore();
+},
 
   /* =====================================================================
      7. PS-X METALLIC CORNER SEALS — holographic upgrade
@@ -7174,7 +7184,6 @@ this.drawNovakEmblemV3(ctx, hvet);
     this.drawHologramStamp(ctx, hvet);
     this.drawGuillochePrimary(ctx, palette);
     this.drawGuillocheInterference(ctx, palette);
-    this.drawTriquetra(ctx, palette);
 
     // Borders + seals
     this.drawMicroBorder(ctx, hvet);
